# Langchain-Langgraph_Ecosystem

./: README.md  pyproject.toml  requirements.txt
Langchain/: sample.txt
Langchain/Chunking/: 02-text_splitter.ipynb  03-Chracter_TextSplitter.ipynb  04-HTML_TextSplitter.ipynb  05-JSON_TextSplitter.ipynb
Langchain/Embedding/: 01-OpenAI_Embedding.ipynb  02-Ollama_Embeddings.ipynb  03-HuggingFace_Embeddings.ipynb
Langchain/dataingestion/: 01-data_ingestion.ipynb
