[project]
name = "langchain-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arxiv>=2.4.1",
    "bs4>=0.0.2",
    "chromadb>=1.5.5",
    "huggingface>=0.0.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.12",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.3",
    "langserve>=0.3.3",
    "langsmith>=0.7.22",
    "pymupdf>=1.27.2.2",
    "pymysql>=1.1.2",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
    "wikipedia>=1.4.0",
]
